examples/test/testpolicy17286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17286
  namespace: namespace443
spec:
  podSelector:
    matchLabels:
      key21: value36
      key14: value6
      key7: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value41
          key12: value17
          key18: value4
      podSelector:
        matchLabels:
          key14: value37
          key32: value15
          key49: value1
